# arthur

./: Arthur Architecture.md  CMakeLists.txt  RinggzSocket.cpp  TODO.md  imgui.ini  package.xml
src/: CMakeLists.txt
src/GL/: CMakeLists.txt
src/daemon/: CMakeLists.txt  daemon.cpp
src/imgui/: CMakeLists.txt
src/infinite_random_test/: CMakeLists.txt  main.cpp
src/pentago/: Pentago.cpp  Random.cpp  Random.h  Vec2i.cpp  Vec2i.h
src/server/: CMakeLists.txt  main.cpp
src/spectrangle/: CMakeLists.txt  Move.cpp  Move.h  RandomAI.cpp  RandomAI.h  Spectrangle.cpp  Spectrangle.h  SpectrangleGame.cpp  SpectrangleGame.h  StochasticAI.cpp  StochasticAI.h
src/testgui/: CMakeLists.txt  GuiUtils.cpp  GuiUtils.h  SpectrangleGameStateWindow.cpp  SpectrangleGameStateWindow.h  SpectrangleTexture.cpp  SpectrangleTexture.h  TileTexture.cpp  TileTexture.h  TriangleRenderer.cpp  TriangleRenderer.h  main.cpp
src/tests/: CMakeLists.txt  trianglegrid_test.cpp
src/utils/: CMakeLists.txt  FixVector.h  Random.cpp  Random.h  TriangleGrid.h  Vec2f.cpp  Vec2f.h  Vec2i.cpp  Vec2i.h
test/: CMakeLists.txt  spectrangle_test.cpp
test/stochastictests/: CMakeLists.txt  infinite_random_test.cpp  pick_random_move_test.cpp
test/unittests/: CMakeLists.txt  spectrangle_test.cpp  trianglegrid_test.cpp
